--- a/public/styles.css
+++ b/public/styles.css
@@ -14,8 +14,7 @@ body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Palatino, Charter, Helvetica;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
