--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -45,12 +45,11 @@ h6 {
   overflow-wrap: break-word;
 }
 
-main {
-  padding: 20px;
-}
-
+main,
 footer {
-  padding: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 10px;
 }
 
 footer > ul {
