--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -48,11 +48,11 @@ h6 {
   overflow-wrap: break-word;
 }
 
+header,
 main,
 footer {
   padding-left: 24px;
   padding-right: 24px;
-  padding-top: 10px;
 }
 
 footer {
@@ -65,6 +65,20 @@ footer {
 }
 
 footer > ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  padding-top: 24px;
+  text-align: right;
+}
+
+header > nav > ul {
+  display: flex;
+  gap: 16px;
+  justify-content: flex-end;
   list-style: none;
   margin: 0;
   padding: 0;
