--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -57,3 +57,38 @@ footer > ul {
   margin: 0;
   padding: 0;
 }
+
+#palestine-flag {
+  position: relative;
+  width: 240px;
+  height: 120px;
+  border: 1px solid black;
+}
+
+#palestine-flag > .red-triangle {
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  border-top: 60px solid transparent;
+  border-bottom: 60px solid transparent;
+  border-left: 60px solid #e4322c;
+}
+
+#palestine-flag > .black-stripe,
+#palestine-flag > .white-stripe,
+#palestine-flag > .green-stripe {
+  width: 100%;
+  height: 40px;
+}
+
+#palestine-flag > .black-stripe {
+  background-color: #000000;
+}
+
+#palestine-flag > .white-stripe {
+  background-color: #ffffff;
+}
+
+#palestine-flag > .green-stripe {
+  background-color: #268024;
+}
