--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -17,7 +17,7 @@ body {
   font-family: Palatino, Charter, Helvetica;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
 }
