--- a/public/pages/index/index.css
+++ b/public/pages/index/index.css
@@ -4,6 +4,12 @@ a:has(section) {
   text-decoration: inherit;
 }
 
+.a-firefox-does-not-support-has-yet {
+  width: 300px;
+  color: inherit;
+  text-decoration: inherit;
+}
+
 div section {
   height: 100px;
   padding: 20px;
@@ -15,6 +21,12 @@ div section {
 }
 
 div:has(section) {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.div-firefox-does-not-support-has-yet {
   display: flex;
   flex-direction: column;
   gap: 16px;
