--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -95,3 +95,11 @@ header > nav > ul {
 time {
   font-style: italic;
 }
+
+.bonny-text {
+  color: #d66cd3;
+}
+
+.systems-text {
+  color: #56d595;
+}
