margin bottom home cards

--- a/public/pages/index/index.css
+++ b/public/pages/index/index.css
@@ -30,4 +30,5 @@ div:has(section) {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 16px;
+  margin-bottom: 16px;
 }
