--- a/public/pages/index/index.css
+++ b/public/pages/index/index.css
@@ -32,6 +32,15 @@ div:has(section) {
   margin-bottom: 16px;
 }
 
+.main-message {
+  max-width: 800px;
+  overflow-wrap: break-word;
+  -webkit-nbsp-mode: space;
+  line-break: after-white-space;
+  border: 2px inset black;
+  padding: 20px;
+}
+
 .body-links {
   margin: 0;
   padding: 20px 0;
@@ -45,4 +54,10 @@ div:has(section) {
 .body-links li {
   padding: 10px;
   border: 2px dotted black;
+}
+
+@media (max-width: 550px) {
+  .body-links {
+    flex-direction: column;
+  }
 }
